# LUVIA

./: MANIFEST.in  README.md  TODO.txt  command_log.txt  pyproject.toml  requirements.txt  setup.py
data/: brown_to_general_pos.csv
data/general_POS/: general_POS_freq_imaginative.txt  general_POS_freq_informative.txt  general_POS_freq_task.txt  general_POS_freq_written.txt
data/postags_freq/: pos_tags.tsv  postags_freq_spwrit.txt  postags_freq_taskconv.txt
src/luvia/: arguments.py  main.py
src/luvia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/luvia/data/characters/: edith_syntax_profile_updated.json  harold_syntax_profile.json  (+1 more)
src/luvia/eyes/: eyes.py
src/luvia/hoof/: hoof.py
src/luvia/straw/: actions.py  straw.py
src/luvia/tongue/: distance.py  tongue.py
src/luvia/utils/: claws_to_general_pos.csv  freqs_tags.tsv  general_POS_freq_all.txt  general_POS_freq_conversation.txt  general_POS_freq_speak.txt  image_utils.py  output_utils.py  pdf_utils.py  postags_freq_all.txt  postags_freq_imaginf.txt
src/luvia/utils_dataset/: utils_data.py
src/luvia_gui/: app_state.py  command_management.py  file_tree.py  input_panel.py  layout.py  main.py  output_browser.py  styles.py  windows_manager.py
src/luvia_gui/backend/: backend_worker.py  command_management.py
src/luvia_gui/components/: file_tree.py  input_panel.py  loop_mode_view.py  output_browser.py  terminal_panel.py
src/luvia_gui/config/: options_config.py
src/luvia_gui/windows/: image_viewer_window.py  json_viewer_window.py  main_control.py  pdf_viewer_window.py
(+5 files in other folders)
